# AgRichterScale

./: .gitignore  AGRICHTER_SCALE_UPDATE.md  AMIS-World-2023072014_29_28.xlsx  AgRichter_main_v2024.m  AgriRichter_Events.m  CLEANUP_AND_FIXES.md  COMMIT_READY_SUMMARY.md  FIGURE_DEPENDENCIES.md  FIGURE_GENERATION_README.md  HOW_TO_GENERATE_FIGURES.md  PERFORMANCE_OPTIMIZATION_COMPLETE_SUMMARY.md  POLICY_RELEVANCE_DEMONSTRATION_SUMMARY.md  PROJECT_STRUCTURE_EXPLANATION.md  README.md  README_MATLAB_VALIDATION.md  README_PUBLICATION.md  REFACTORING_PLAN.md  STATUS.md  Supplementary_Information.tex  TASK_3_1_PIPELINE_INTEGRATION_SUMMARY.md  cleanup_repository.sh  generate_all_figures.py  matlab_reference_generation_guide.md  pyproject.toml  requirements.txt  run_fig.sh  test_matlab_validation.py
USDAdata/: data_provenance.txt  grains_world_usdapsd_consumption_jan212026.csv  grains_world_usdapsd_consumption_jul142023.csv  grains_world_usdapsd_consumption_jul142023_kcal.csv  grains_world_usdapsd_endingstocks_jan212026.csv  grains_world_usdapsd_endingstocks_jul142023.csv  grains_world_usdapsd_endingstocks_jul142023_kcal.csv  grains_world_usdapsd_harvestarea_jul142023.csv  grains_world_usdapsd_production_jan212026.csv  grains_world_usdapsd_production_jul142023.csv  grains_world_usdapsd_production_jul142023_kcal.csv  usda_psd_1961to2021_maize.csv  usda_psd_1961to2021_rice.csv  usda_psd_1961to2021_wheat.csv  usda_psd_1961to2025_maize.csv  usda_psd_1961to2025_rice.csv  usda_psd_1961to2025_wheat.csv
agrichter/: __init__.py
agririchter/: __init__.py
ancillary/: Cereal_supply_and_demand_data_jun889.xls  CountryCode_Convert.xls  DisruptionCountry.xls  DisruptionStateProvince.xls  Foodcodes_SPAMtoFAOSTAT.xls  LossTablesWheatAll.xlsx  Nutrition_SPAMcrops.xls  event_attributes.csv  food_disruptions.csv
archive/: AgriRichterv2.py  BalanceAnalysis.py  StocksSampler.py  test_newer_countries_states.py  verify_validation_module.py
docs/: API_REFERENCE.md  COUNTRY_ADDITION_GUIDE.md  COUNTRY_DATA_REQUIREMENTS.md  DATA_FILTERING_METHODOLOGY.md  DATA_REQUIREMENTS.md  ENVELOPE_BUILDER_MATHEMATICAL_GUIDE.md  MULTI_TIER_API_REFERENCE.md  MULTI_TIER_DOCUMENTATION_INDEX.md  MULTI_TIER_POLICY_GUIDE.md  MULTI_TIER_TECHNICAL_GUIDE.md  MULTI_TIER_USER_GUIDE.md  PIPELINE_INTEGRATION_GUIDE.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: demo_agririchter_figures.py  demo_agririchter_scale.py  demo_convergence_validation.py  (+18 more)
(+339 files in other folders)
