[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agrichter"
version = "1.0.0"
description = "A Python framework for analyzing agricultural production disruptions using Richter-scale measurements"
readme = "README.md"
authors = [
    {name = "AgRichter Development Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "cartopy>=0.21.0",
    "geopandas>=0.12.0",
    "seaborn>=0.11.0",
    "cmocean>=2.0",
    "adjustText>=0.7.3",
    "scipy>=1.8.0",
    "shapely>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.991",
    "flake8>=5.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
agrichter = "agrichter.cli.main:main"

[project.urls]
Homepage = "https://github.com/agrichter/agrichter-python"
Documentation = "https://agrichter-python.readthedocs.io/"
Repository = "https://github.com/agrichter/agrichter-python.git"
Issues = "https://github.com/agrichter/agrichter-python/issues"

[tool.setuptools.packages.find]
include = ["agrichter*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=agrichter --cov-report=html --cov-report=term-missing"